<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/tvScreen"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="#A924C4D9"
        android:text="@string/tv_name"
        android:textSize="36sp"
        android:gravity="end|bottom"/>
    <LinearLayout
        android:id="@+id/rowOperations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnPlus"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_plus"/>
        <Button
            android:id="@+id/btnMinus"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_minus"/>
        <Button
            android:id="@+id/btnMultiply"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_multiply"/>
        <Button
            android:id="@+id/btnDivide"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_divide"/>
    </LinearLayout>

</LinearLayout>